Use minSdk-safe URL decoding